--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  
+  each message in messages 
+    p (#{message.date_formatted}) #{message.user}: #{message.text}
