--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,14 @@
+:root {
+  --chat-background: #abd1c6;
+  --chat-header: #004643;
+  --chat-text: #fffffe;
+  --chat-user: #abd1c6;
+  --chat-card: #004643;
+  --chat-btn: #f9bc60;
+  --chat-btn-hover: #f7ad3e;
+  --chat-btn-text: #001e1d;
+}
+
 html {
   width: 100%;
   height: 100%;
@@ -16,6 +27,38 @@ body {
 .App {
   text-align: center;
   
-  width: 800px;
+  width: 1200px;
   height: 100%;
+  
+  box-shadow: 45px 10px 25px gray;
+}
+
+.App-container {
+  background-color: var(--chat-background);
+  
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  height: 100%;
+  
+  padding:  20px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #79b6a4;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #437a6a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #356255;
 }
